test/cpls/errors/while-args-number.cpls
{
  "type": "CALL",
  "operator": {
    "type": "WORD",
    "name": "while",
    "offset": 0,
    "line": 1,
    "column": 1
  },
  "args": [
    {
      "type": "VALUE",
      "value": 1,
      "offset": 6,
      "line": 1,
      "column": 7
    }
  ]
}